rebaseAdd base form

--- a/app/pages/_no38/index.njk
+++ b/app/pages/_no38/index.njk
@@ -26,88 +26,164 @@
 
   <section class="section-primary">
     <div class="container-1200">
-      <div class="des-icon-list flex gap60">
-        <div class="des-icon flex gap20">
-          <div class="des-icon-img">
-            <img src="/assets/img/common/img-account-01.png" alt="">
+      <p class="section-ttl">導入前のご相談・ご質問を受け付けています。お気軽にお問い合わせください。2営業日以内に回答いたします。</p>
+
+      <div class="form-primary">
+        <div class="form-section product-field">
+          <div class="form-ttl">
+            <span class="item">お問い合わせ商品（複数選択可）</span> <span class="required"></span>
           </div>
 
-          <div class="des-icon-content">
-            <h5 class="ttl-quinary">
-              株式会社サカイ引越センター
-            </h5>
+          <div>
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" checked>
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード</span>
+            </label>
 
-            <h6 class="ttl-senary">管理部　次長　清水幸治　様 <br>管理部　川出彩香　様</h6>
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンゴールド・ビジネス プロ・カード</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード	</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンプラチナ・ビジネス・アメリカン・エキスプレス®️・カード</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カード</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">支払い.com</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">Concur Expense	</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンインボイス	</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">ビジネスファンディング</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンフクリコ</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">ビジネスサポートローング</span>
+            </label>
+
+            <label class="custom-checkbox flex fS aiC">
+              <input type="checkbox" >
+              <span class="checkmark"></span> <span class="custom-check-box-label">CosPro（出張手配サービス）</span>
+            </label>
+          </div>
+        </div>
+
+        <div class="form-section company-name-field">
+          <div class="form-ttl">
+            <span class="item">会社名</span> <span class="required"></span>
+          </div>
+
+          <input type="text" placeholder="株式会社クレディセゾン">
+        </div>
+
+        <div class="form-section prefecture-field">
+          <div class="form-ttl">
+            <span class="item h1">事業所所在地（都道府県）</span> <span class="required"></span>
+          </div>
+
+          <div class="custom-select">
+            <select>
+              <option value="option1">東京都</option>
+            </select>
           </div>
         </div>
 
-        <div class="des-icon flex gap20">
-          <div class="des-icon-img">
-            <img src="/assets/img/common/img-bag-02.png" alt="">
+        <div class="form-section name-field">
+          <div class="form-ttl">
+            <span class="item h1">お名前</span> <span class="required"></span>
           </div>
 
-          <div class="des-icon-content">
-            <h5 class="ttl-quinary">
-              引越運送、引越付帯サービス業務
-            </h5>
-          </div>
-        </div>
-      </div>
-
-      <ul class="question-list">
-        <li class="question-item">
-          <h3 class="ttl-tertiary">Q1.弊社商品の導入前に抱えていた課題についてお聞かせください。</h3>
-
-          <div class="question-content">
-            <p>以前からETCカードは利用はしていましたが、実際利用したETCカードの使用実績は報告書から集計を手作業で作成しており、毎月の事務処理や経費計算処理にもにかなりの手間と時間がかかっていました。</p>
-          </div>
-        </li>
-
-        <li class="question-item">
-          <h3 class="ttl-tertiary">Q2.ご導入いただいたポイント（またはきっかけなど）をお聞かせください。</h3>
-
-          <div class="question-content flex gap30">
-            <div class="question-img">
-              <img src="/assets/img/common/img-question-01.png" alt="">
-            </div>
-
-            <div class="question-txt">
-              <p>クレディセゾンの営業担当者より使用実績のデータ化についての説明を聞き、経費計算処理および事務処理の効率化が図れると考えたため導入をしようと思いました。<br> <br>
-                また、カード券面自体に自社の管理区分である文字が印字することが可能と聞き、当社の管理上でも業務効率化の向上がはかれると考えました。
-              </p>
-            </div>
-          </div>
-        </li>
-
-        <li class="question-item">
-          <h3 class="ttl-tertiary">Q3.弊社商品を導入後、貴社が抱えていた課題がどのように解決されたかお聞かせください。</h3>
-
-          <div class="question-content">
-            <p>集計業務が手作業からデータでの処理が可能になり、効率化が大幅に改善されました。</p>
-          </div>
-        </li>
-      </ul>
-
-      <div class="section-card">
-        <h6 class="ttl-senary">SERVICES USED</h6>
-
-        <h2 class="ttl-secondary">本事例でご利用されたサービス</h2>
-
-        <div class="card-item flex">
-          <div class="card-item--img">
-            <img src="/assets/img/credit_cards/plastic-mockup.png" alt="">
-          </div>
-
-          <div class="card-item--content">
-            <h3 class="ttl-tertiary">有料道路の料金所をキャッシュレスで通過できるETCカード</h3>
-
-            <p>お手持ちのUC法人・コーポレートカードへの追加や、<br>
-              法人様向けにETCカードだけをご用意することも可能です。
-            </p>
-
-            <a href="#" class="btn05 small">詳細はこちら</a>
+          <div class="flex aiC fS gap20">
+            <p class="flex fS aiC half nowrap"><span>氏</span><input type="text" placeholder="例）佐藤"></p>
+            <p class="flex fS aiC half nowrap"><span>名</span><input type="text" placeholder="例）太郎"></p>
           </div>
         </div>
+
+        <div class="form-section company-email-field">
+          <div class="form-ttl">
+            <span class="item h1">勤務先メールアドレス</span> <span class="required"></span>
+          </div>
+
+          <input type="email" placeholder="yamada@company.co.jp">
+        </div>
+
+        <div class="form-section work-email-field">
+          <div class="form-ttl">
+            <span class="item h1">勤務先メールアドレス（確認用）</span> <span class="required"></span>
+          </div>
+
+          <input type="email" placeholder="yamada@company.co.jp">
+        </div>
+
+        <div class="form-section tel-field">
+          <div class="form-ttl">
+            <span class="item h1">電話番号</span> <span class="required"></span>
+          </div>
+
+          <input type="tel" placeholder="03-1234-5678">
+        </div>
+
+        <div class="form-section inquiry-purpose-field">
+          <div class="form-ttl">
+            <span class="item h1">お問い合わせの目的</span> <span class="required"></span>
+          </div>
+
+          <div class="custom-select">
+            <select>
+              <option value="option1">選択してください</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-section inquiry-detail-field">
+          <div class="form-ttl">
+            <span class="item h1">電話番号</span> <span class="required"></span>
+          </div>
+
+          <textarea placeholder="お問い合わせの内容をご記入ください。" rows="8"></textarea>
+        </div>
+
+        <div class="form-section term-agree-field">
+          <div class="form-ttl">
+            <span class="item h1">個人情報の取扱いに同意する</span> <span class="required"></span>
+          </div>
+
+          <label class="custom-checkbox flex fS aiC">
+            <input type="checkbox">
+            <span class="checkmark"></span> <span class="custom-check-box-label">同意する</span>
+          </label>
+        </div>
+
+        <a href="#"><p class="term-agreement">「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p></a>
       </div>
     </div>
   </section>
