--- a/app/assets/scss/3-modules/_form.scss
+++ b/app/assets/scss/3-modules/_form.scss
@@ -267,3 +267,131 @@
     }
   }
 }
+
+.form-primary {
+  text-align: left;
+  padding: 60px 70px;
+  background-color: #f5f5f5;
+
+  .form-section {
+    margin-bottom: 30px;
+
+    .form-ttl {
+      margin-bottom: 10px;
+      .item {
+        font-weight: 700;
+        margin-right: 10px;
+      }
+    }
+
+    .custom-checkbox {
+      position: relative;
+      display: flex;
+      margin-right: 10px;
+      gap: 7px;
+      margin-top: 7px;
+
+      input[type="checkbox"] {
+        display: none;
+      }
+
+      .checkmark {
+        background-color: #fff;
+        position: relative;
+        display: inline-block;
+        width: 21px;
+        height: 21px;
+        border: 1px solid #707070;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-right: 5px;
+
+        &::after {
+          content: "";
+          position: absolute;
+          left: 10px;
+          top: -1px;
+          width: 5px;
+          height: 14px;
+          border: solid #0497b5;
+          border-width: 0 2px 2px 0px;
+          -webkit-transform: rotate(45deg);
+          -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+          display: none;
+        }
+      }
+
+      input[type="checkbox"]:checked + .checkmark::after {
+        display: block;
+      }
+
+      .custom-check-box-label {
+        font-size: 14px;
+      }
+    }
+
+    select,
+    textarea,
+    input[type="text"],
+    input[type="email"],
+    input[type="url"],
+    input[type="tel"],
+    input[type="checkbox"] {
+      font-size: 16px;
+      width: 100%;
+      padding: 5px 10px;
+      border: 1px solid #bbbbbb;
+      border-radius: 3px;
+      background: #fff;
+      height: 40px;
+      @media #{$sp} {
+        font-size: 16px;
+      }
+      &::placeholder {
+        font-size: 13px;
+        font-weight: bold;
+        color: #a5a5a5;
+      }
+    }
+
+    .custom-select {
+      position: relative;
+    }
+
+    .custom-select select {
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+    }
+
+    .custom-select::after {
+      content: "";
+      position: absolute;
+      top: 45%;
+      right: 15px;
+      transform: translateY(-50%) rotate(315deg);
+      width: 10px;
+      height: 10px;
+      border-left: 2px solid #555;
+      border-bottom: 2px solid #555;
+      pointer-events: none;
+    }
+
+    .required {
+      display: inline-block;
+      font-weight: 700;
+      font-size: 11px;
+      padding: 0 5px;
+      background: red;
+      color: #fff;
+      -webkit-border-radius: 3px;
+      border-radius: 3px;
+
+      &:after {
+        content: "必須";
+      }
+    }
+  }
+
+}
