rebaseadd custom select

--- a/app/pages/contact/index.njk
+++ b/app/pages/contact/index.njk
@@ -37,61 +37,64 @@
           <div>
             <label class="custom-checkbox flex fS aiC">
               <input type="checkbox" checked>
-              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンプラチナ・ビジネス プロ・アメリカン・エキスプレス®・カード</span>
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンプラチナ・ビジネス
+                プロ・アメリカン・エキスプレス®・カード</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
+              <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">セゾンゴールド・ビジネス プロ・カード</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
-              <span class="checkmark"></span> <span class="custom-check-box-label">セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード	</span>
+              <input type="checkbox">
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード
+              </span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
-              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンプラチナ・ビジネス・アメリカン・エキスプレス®️・カード</span>
+              <input type="checkbox">
+              <span class="checkmark"></span> <span
+                class="custom-check-box-label">セゾンプラチナ・ビジネス・アメリカン・エキスプレス®️・カード</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
+              <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カード</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
+              <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">支払い.com</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
-              <span class="checkmark"></span> <span class="custom-check-box-label">Concur Expense	</span>
+              <input type="checkbox">
+              <span class="checkmark"></span> <span class="custom-check-box-label">Concur Expense </span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
-              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンインボイス	</span>
+              <input type="checkbox">
+              <span class="checkmark"></span> <span class="custom-check-box-label">セゾンインボイス </span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
+              <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">ビジネスファンディング</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
+              <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">セゾンフクリコ</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
+              <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">ビジネスサポートローング</span>
             </label>
 
             <label class="custom-checkbox flex fS aiC">
-              <input type="checkbox" >
+              <input type="checkbox">
               <span class="checkmark"></span> <span class="custom-check-box-label">CosPro（出張手配サービス）</span>
             </label>
           </div>
@@ -111,9 +114,23 @@
           </div>
 
           <div class="custom-select">
-            <select>
-              <option value="option1">東京都</option>
-            </select>
+            <div class="select_wrap">
+              <ul class="default_option">
+                <li>
+                  <div class="option disabled">
+                    <p>東京都</p>
+                  </div>
+                </li>
+              </ul>
+
+              <ul class="select_ul">
+                <li>
+                  <div class="option">
+                    <p>商品の機能について</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
 
@@ -158,9 +175,50 @@
           </div>
 
           <div class="custom-select">
-            <select>
-              <option value="option1">選択してください</option>
-            </select>
+            <div class="select_wrap">
+              <ul class="default_option">
+                <li>
+                  <div class="option">
+                    <p>選択してください</p>
+                  </div>
+                </li>
+              </ul>
+
+              <ul class="select_ul">
+                <li>
+                  <div class="option">
+                    <p>商品の機能について</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="option burger">
+                    <p>商品の価格について</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="option ice">
+                    <p>商品の利用方法について</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="option fries">
+                    <p>ご契約までの期間について</p>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="option fries">
+                    <p>ご契約後フォローについて</p>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="option fries">
+                    <p>その他</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
 
@@ -183,7 +241,9 @@
           </label>
         </div>
 
-        <a href="#"><p class="term-agreement">「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p></a>
+        <a href="#">
+          <p class="term-agreement">「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p>
+        </a>
       </div>
     </div>
   </section>
@@ -199,4 +259,17 @@
     </ul>
   </section>
 </main>
+
+<script>
+  $(".default_option").click(function () {
+    $(this).parent().toggleClass("active");
+  })
+
+  $(".select_ul li").click(function () {
+    var currentele = $(this).html();
+    $(".default_option li").html(currentele);
+    $(this).parents(".select_wrap").removeClass("active");
+  })
+</script>
+
 {% endblock %}
